// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List List should match the snapshot 1`] = `
<div
  className="list-overflow-container"
>
  <ul
    className="list-group"
  />
</div>
`;

exports[`List List with ListItems should match the snapshot 1`] = `
<div
  className="list-overflow-container"
>
  <ul
    className="list-group"
  >
    <li
      className="list-group-item"
    >
      <div
        className="container"
      >
        <div
          className="row"
        >
          <div
            className="col-xs-8 col-sm-9"
          >
            <h3 />
            <p />
          </div>
        </div>
      </div>
    </li>
    <li
      className="list-group-item"
    >
      <div
        className="container"
      >
        <div
          className="row"
        >
          <div
            className="col-xs-8 col-sm-9"
          >
            <h3 />
            <p />
          </div>
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`List ListItem should match the snapshot 1`] = `
<li
  className="list-group-item"
>
  <div
    className="container"
  >
    <div
      className="row"
    >
      <div
        className="col-xs-8 col-sm-9"
      >
        <h3 />
        <p />
      </div>
    </div>
  </div>
</li>
`;
